syntax = "proto3";
option java_package = "io.textile.pb";
option go_package = "pb";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "model.proto";

// for wire transport
message ThreadEnvelope {
    string thread    = 1;
    string hash      = 2; // hash of encrypted block
    bytes ciphertext = 3; // encrypted ThreadBlock, also stored on ipfs for recovery
    bytes sig        = 4; // account signature
}

message ThreadBlock {
    ThreadBlockHeader header    = 1;
    Block.BlockType type        = 2;
    google.protobuf.Any payload = 3; // nil for some types
}

message ThreadBlockHeader {
    google.protobuf.Timestamp date = 1;
    repeated string parents        = 2 [deprecated = true];
    string author                  = 3;
    string address                 = 4;
}

message ThreadAdd { // not kept on-chain
    Peer inviter  = 1;
    Thread thread = 2;
}

message ThreadIgnore {
    string target = 1;
}

message ThreadFlag {
    string target = 1;
}

message ThreadJoin {
    string inviter = 1;
    Peer peer      = 2;
}

message ThreadAnnounce {
    Peer peer   = 1;
    string name = 2; // new thread name
}

message ThreadMessage {
    string body = 1;
}

message ThreadFiles {
    string target            = 1; // top-level file hash
    string body              = 2;
    map<string, string> keys = 3; // hash: key
}

message ThreadComment {
    string target = 1;
    string body   = 2;
}

message ThreadLike {
    string target = 1;
}
